# completions

./: .pre-commit-config.yaml  .tagitrc  pyproject.toml  requirements.txt  setup.py
completions-resurrection/: __init__.py
